추출내용확정후 코드 시행

--- a/backend/utils/pdf_extracting.ipynb
+++ b/backend/utils/pdf_extracting.ipynb
@@ -2035,11 +2035,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b34b955f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "no such file: '--f=/Users/Star1/Library/Jupyter/runtime/kernel-v3afba1bab3681254f48fbada6b42296d576320189.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/34/nfsz0w6s5rl3lqtq7z6j5p_h0000gp/T/ipykernel_41055/2288965750.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[1;32m     65\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Usage: python extract.py path/to/file.pdf\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0mpdf_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_fields\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpdf_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m     \u001b[0;31m# 단순 프린트\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{key}: {val}\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/34/nfsz0w6s5rl3lqtq7z6j5p_h0000gp/T/ipykernel_41055/2288965750.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(pdf_path)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mextract_fields\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpdf_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0mdoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfitz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpdf_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m     \u001b[0;31m# ==== 1) 6~8p에서 단일스트링으로 뽑아낼 항목들 ====\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mpages_6_8\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# 0-based index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pymupdf/__init__.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, filename, stream, filetype, rect, width, height, fontsize)\u001b[0m\n\u001b[1;32m   3045\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpage_count2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextra\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpage_count_pdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3046\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3047\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpage_count2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextra\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpage_count_fz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3048\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3049\u001b[0;31m             \u001b[0mJM_mupdf_show_errors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mJM_mupdf_show_errors_old\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: no such file: '--f=/Users/Star1/Library/Jupyter/runtime/kernel-v3afba1bab3681254f48fbada6b42296d576320189.json'"
+     ]
+    }
+   ],
+   "source": [
+    "import fitz     # pip install PyMuPDF\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "def extract_paragraph(text, start_pattern):\n",
+    "    \"\"\"start_pattern이 포함된 줄부터, 빈 줄 전까지 연속된 모든 줄을 반환\"\"\"\n",
+    "    lines = text.splitlines()\n",
+    "    paragraph = []\n",
+    "    capture = False\n",
+    "    for line in lines:\n",
+    "        if start_pattern in line:\n",
+    "            capture = True\n",
+    "        if capture:\n",
+    "            # 빈 줄 만나면 종료\n",
+    "            if line.strip() == \"\":\n",
+    "                break\n",
+    "            paragraph.append(line)\n",
+    "    return \"\\n\".join(paragraph).strip()\n",
+    "\n",
+    "def extract_fields(pdf_path):\n",
+    "    doc = fitz.open(pdf_path)\n",
+    "    # ==== 1) 6~8p에서 단일스트링으로 뽑아낼 항목들 ====\n",
+    "    pages_6_8 = \"\"\n",
+    "    for idx in (5, 6, 7):  # 0-based index\n",
+    "        if idx < len(doc):\n",
+    "            pages_6_8 += doc[idx].get_text()\n",
+    "\n",
+    "    results = {}\n",
+    "\n",
+    "    # 1-8) 라벨 기반 단일행 추출\n",
+    "    labels = [\n",
+    "        \"종목명\", \"기초자산\", \"청약기간\",\n",
+    "        \"납입일\", \"배정일\", \"환불일\",\n",
+    "        \"발행일\", \"만기일\"\n",
+    "    ]\n",
+    "    for label in labels:\n",
+    "        m = re.search(rf\"{label}\\s*[:：]?\\s*(.+)\", pages_6_8)\n",
+    "        results[label] = m.group(1).strip() if m else None\n",
+    "\n",
+    "    # 9) 고난도금융투자상품 해당여부(문구 전체)\n",
+    "    m = re.search(r\"\\(.*?\\)\\s*고난도금융투자상품\", pages_6_8)\n",
+    "    results[\"고난도금융투자상품\"] = m.group(0).strip() if m else None\n",
+    "\n",
+    "    # ==== 2) 로마자2. 증권의 주요 권리내용 ====\n",
+    "    # (1) 상황별 손익구조\n",
+    "    all_text = \"\"\n",
+    "    for page in doc:\n",
+    "        all_text += page.get_text()\n",
+    "    results[\"(1) 상황별 손익구조\"] = extract_paragraph(all_text, \"(1) 상황별 손익구조\")\n",
+    "\n",
+    "    # (5) 최대이익액 및 최대손실액\n",
+    "    results[\"(5) 최대이익액 및 최대손실액\"] = extract_paragraph(all_text, \"(5) 최대이익액 및 최대손실액\")\n",
+    "\n",
+    "    # ==== 3) 2.권리의 내용 - (4) 투자자의 요청에 의한 중도상환 - 다. ====\n",
+    "    # 중도상환 신청방법 (표 셀)\n",
+    "    results[\"중도상환 신청방법\"] = extract_paragraph(all_text, \"중도상환 신청방법\")\n",
+    "\n",
+    "    # 단, 중도상환 가격 산정시~ 문단 전체\n",
+    "    results[\"단, 중도상환 가격 산정시 단락\"] = extract_paragraph(all_text, \"단, 중도상환 가격 산정시\")\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    if len(sys.argv) != 2:\n",
+    "        print(\"Usage: python extract.py path/to/file.pdf\")\n",
+    "        sys.exit(1)\n",
+    "\n",
+    "    pdf_path = sys.argv[1]\n",
+    "    data = extract_fields(pdf_path)\n",
+    "    # 단순 프린트\n",
+    "    for key, val in data.items():\n",
+    "        print(f\"{key}: {val}\\n\")\n"
+   ]
   }
  ],
  "metadata": {
