--- a/backend/utils/pdf_extracting.ipynb
+++ b/backend/utils/pdf_extracting.ipynb
@@ -2147,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "a4f3c2c8",
    "metadata": {},
    "outputs": [
@@ -2155,7 +2155,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'종목명': '신한투자증권 26349호 파생결합증권(주가연계증권)', '기초자산': 'KOSPI200 지수/S&P500 지수/EuroStoxx50 지수', '만기일': '2028년 03월 29일', '자동조기상환': [['1차', '90%', '2025년 09월 25일', '104.65%'], ['2차', '90%', '2026년 03월 25일', '109.30%'], ['3차', '85%', '2026년 09월 23일', '113.95%'], ['4차', '85%', '2027년 03월 25일', '118.60%'], ['5차', '80%', '2027년 09월 24일', '123.25%']], '손실조건버전': 'ver2', '최대손실낙폭비율': '50%', '최대손실만기조건비율': '75%'}\n"
+      "종목명: 신한투자증권 26377호 파생결합증권(주가연계증권)\n",
+      "\n",
+      "기초자산: KOSPI200 지수/S&P500 지수/EuroStoxx50 지수\n",
+      "\n",
+      "만기일: 2028년 04월 17일\n",
+      "\n",
+      "자동조기상환: [['1차', '90%', '2025년 10월 10일', '104.20%'], ['2차', '90%', '2026년 04월 10일', '108.40%'], ['3차', '85%', '2026년 10월 08일', '112.60%'], ['4차', '85%', '2027년 04월 09일', '116.80%'], ['5차', '80%', '2027년 10월 08일', '121.00%']]\n",
+      "\n",
+      "손실조건버전: ver2\n",
+      "\n",
+      "낙인구간: 50%\n",
+      "\n",
+      "만기일가격: 75%\n",
+      "\n"
      ]
     }
    ],
@@ -2271,10 +2284,10 @@
     "    )\n",
     "\n",
     "    #2가지 버전으로 나눠서 처리했음.\n",
-    "        #ver1은 그냥 만기일 기준으로만 % 제한이 있을 때. = '최대손실조건비율' 임의 정의\n",
+    "        #ver1은 그냥 만기일 기준으로만 % 제한이 있을 때. = '만기일가격' 임의 정의\n",
     "                # 예) 만기일 기준 최초기준가격의 50%이상이어야한다\n",
     "        #ver2는 만기일 기준으로도 % 제한이 있고,  ='최대손실 만기조건 비율' 임의 정의\n",
-    "        #   추가로 상품 전체 기간동안 '한번이라도 떨어지면 그만큼 손실나는' % 제한있을 때. ='최대손실낙폭비율' 임의로 정의\n",
+    "        #   추가로 상품 전체 기간동안 '한번이라도 떨어지면 그만큼 손실나는' % 제한있을 때. ='낙인구간' 임의로 정의\n",
     "                # 예) 만기일 기준 최초기준가격의 60%이상이어야 하고, 전체 기간동안 50% 미만으로 한번도 떨어지면 안된다\n",
     "    \n",
     "    if \"(5) 최대이익액 및 최대손실액\" in pages_5_21:\n",
@@ -2287,28 +2300,28 @@
     "        if m50:\n",
     "            results[\"손실조건버전\"] = \"ver2\"\n",
     "            # (a) 낙폭 기준 비율\n",
-    "            results[\"최대손실낙폭비율\"] = m50.group(1) + \"%\"\n",
+    "            results[\"낙인구간\"] = m50.group(1) + \"%\"\n",
     "            # (b) 만기조건 비율\n",
     "            m75 = re.search(r\"만기평가가격[^%]*?최초기준가격의\\s*([\\d.]+)%\", max_sec)\n",
-    "            results[\"최대손실만기조건비율\"] = m75.group(1) + \"%\" if m75 else None\n",
+    "            results[\"만기일가격\"] = m75.group(1) + \"%\" if m75 else None\n",
     "\n",
     "        else:\n",
     "            # 7-2) ver1: '만기평가가격이 최초기준가격의 XX% 보다 작은' 패턴만\n",
     "            m1 = re.search(r\"만기평가가격이\\s*최초기준가격의\\s*([\\d.]+)%\", max_sec)\n",
     "            if m1:\n",
     "                results[\"손실조건버전\"] = \"ver1\"\n",
-    "                results[\"최대손실조건비율\"] = m1.group(1) + \"%\"\n",
+    "                results[\"만기일가격\"] = m1.group(1) + \"%\"\n",
     "            else:\n",
     "                # 둘 다 못 찾으면 None 처리\n",
     "                results[\"손실조건버전\"] = None\n",
-    "                results[\"최대손실조건비율\"] = None\n",
-    "                results[\"최대손실낙폭비율\"] = None\n",
-    "                results[\"최대손실만기조건비율\"] = None\n",
+    "                results[\"만기일가격\"] = None\n",
+    "                results[\"낙인구간\"] = None\n",
+    "                results[\"만기일가격\"] = None\n",
     "    else:\n",
     "        results[\"손실조건버전\"] = None\n",
-    "        results[\"최대손실조건비율\"] = None\n",
-    "        results[\"최대손실낙폭비율\"] = None\n",
-    "        results[\"최대손실만기조건비율\"] = None\n",
+    "        results[\"만기일가격\"] = None\n",
+    "        results[\"낙인구간\"] = None\n",
+    "        results[\"만기일가격\"] = None\n",
     "\n",
     "    \n",
     "    \n",
@@ -2319,22 +2332,22 @@
     "    \n",
     "    #     # '최초기준가격의 65% 보다 작은' 에서 65%만 캡처\n",
     "    #     m = re.search(r\"만기평가가격이\\s*최초기준가격의\\s*([\\d.]+)%\", max_sec)\n",
-    "    #     results[\"최대손실조건비율\"] = m.group(1) + \"%\" if m else None\n",
+    "    #     results[\"만기일가격\"] = m.group(1) + \"%\" if m else None\n",
     "    # else:\n",
-    "    #     results[\"최대손실조건비율\"] = None\n",
+    "    #     results[\"만기일가격\"] = None\n",
     "\n",
     "\n",
     "\n",
     "    return results\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    pdf_path = \"신한_투자설명서_26349호.pdf\"  # 같은 폴더에 있으면 파일명만\n",
+    "    pdf_path = \"신한_투자설명서_26377호.pdf\"  # 같은 폴더에 있으면 파일명만\n",
     "    data = extract_fields(pdf_path)\n",
     "    \n",
-    "    print(data)\n",
+    "    # print(data)\n",
     "    \n",
-    "    # for key, val in data.items():\n",
-    "    #     print(f\"{key}: {val}\\n\")\n"
+    "    for key, val in data.items():\n",
+    "        print(f\"{key}: {val}\\n\")\n"
    ]
   },
   {
